Fix ActionDrawer text color in dark mode

--- a/packages/web/src/components/action-drawer/ActionDrawer.module.css
+++ b/packages/web/src/components/action-drawer/ActionDrawer.module.css
@@ -54,5 +54,5 @@
 }
 
 .darkAction {
-  color: var(--harmony-white);
+  color: var(--harmony-static-white);
 }
